<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>gov.nih.nlm.nls</groupId>
  <artifactId>metamaplite</artifactId>
  <packaging>jar</packaging>
  <version>3.6.2rc8</version>
  <name>metamaplite</name>
  <url>http://maven.apache.org</url>
  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>2.10.1</version>
        <configuration>
          <show>private</show>
          <nohelp>true</nohelp>
        </configuration>
      </plugin>
      <plugin>
	<groupId>org.apache.maven.plugins</groupId>
	<artifactId>maven-compiler-plugin</artifactId>
	<version>2.5.1</version>
	<configuration>
          <source>1.8</source>
          <target>1.8</target>
	  <encoding>UTF-8</encoding>
          <debug>true</debug>
          <debuglevel>lines,vars,source</debuglevel> 
	</configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.4.0</version>
        <configuration>
          <executable>java</executable>
          <arguments>
	    <argument>-Xmx10g</argument>
	    <argument>-classpath</argument>
	    <classpath/>
	    <argument>${classnameArg}</argument>
            <argument>${arg0}</argument>
            <argument>${arg1}</argument>
	    <argument>${arg2}</argument>
	    <argument>${arg3}</argument>
	    <argument>${arg4}</argument>
	  </arguments>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>exec</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>2.4.1</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
          </execution>
        </executions>
	<configuration>
	  <filters>
            <filter>
              <artifact>*:*</artifact>
              <excludes>
                <exclude>META-INF/*.SF</exclude>
                <exclude>META-INF/*.DSA</exclude>
                <exclude>META-INF/*.RSA</exclude>
              </excludes>
            </filter>
	  </filters>
          <shadedArtifactAttached>true</shadedArtifactAttached>
          <shadedClassifierName>standalone</shadedClassifierName>
        </configuration>
      </plugin>
    </plugins>
  </build>
  <repositories>
    <!-- repository>
      <id>bionlp-sourceforge</id>
      <url>http://svn.code.sf.net/p/bionlp/code/repo</url>
    </repository>
    <repository>
      <id>central</id>
      <url>http://central.maven.org/maven2/</url>
    </repository -->
    <repository>
      <id>metamap maven</id>
      <url>https://metamap.nlm.nih.gov/maven2/</url>
    </repository>
  </repositories>
  <dependencies>
    <dependency>
      <groupId>com.github.jankroken</groupId>
      <artifactId>commandline</artifactId>
      <version>1.7.0</version>
    </dependency>
    <dependency>
      <groupId>org.apache.opennlp</groupId>
      <artifactId>opennlp-tools</artifactId>
      <version>1.9.3</version>
    </dependency>
    <dependency>
      <groupId>org.apache.opennlp</groupId>
      <artifactId>opennlp-maxent</artifactId>
      <version>3.0.3</version>
    </dependency>
    <!--
    <dependency>
      <groupId>edu.stanford.nlp</groupId>
      <artifactId>stanford-corenlp</artifactId>
      <version>3.9.1</version>
    </dependency>
    <dependency>
      <groupId>edu.stanford.nlp</groupId>
      <artifactId>stanford-corenlp</artifactId>
      <version>3.9.1</version>
      <classifier>models</classifier>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-api</artifactId>
      <version>2.17.2</version>
    </dependency>
    <dependency>
      <groupId>org.apache.logging.log4j</groupId>
      <artifactId>log4j-core</artifactId>
      <version>2.17.2</version>
    </dependency>
    -->
    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
    <dependency>
      <groupId>org.apache.commons</groupId>
      <artifactId>commons-lang3</artifactId>
      <version>3.11</version>
    </dependency>
    <dependency>
      <groupId>commons-logging</groupId>
      <artifactId>commons-logging</artifactId>
      <version>1.2</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>1.7.32</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>1.7.32</version>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.dataformat</groupId>
      <artifactId>jackson-dataformat-yaml</artifactId>
      <version>2.16.1</version>
    </dependency>
    <!-- https://metamap.nlm.nih.gov/maven2 -->
    <dependency>
      <groupId>context</groupId>
      <artifactId>context</artifactId>
      <version>2012</version>
    </dependency>
    <!-- https://metamap.nlm.nih.gov/maven2 -->
    <dependency>
      <groupId>bioc</groupId>
      <artifactId>bioc</artifactId>
      <version>1.0.1</version>
    </dependency>
    <dependency>
      <groupId>net.sf.opencsv</groupId>
      <artifactId>opencsv</artifactId>
      <version>2.3</version>
    </dependency>
    <dependency>
      <groupId>xmlunit</groupId>
      <artifactId>xmlunit</artifactId>
      <version>1.4</version>
    </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.uima/uimaj-core -->
    <dependency>
      <groupId>org.apache.uima</groupId>
      <artifactId>uimaj-core</artifactId>
      <version>3.5.0</version>
    </dependency>
    
    <!-- 2019.0: https://mvnrepository.com/artifact/gov.nih.nlm.nls.lvg/lvgdist -->
    <!-- 2020.0: https://metamap.nlm.nih.gov/maven2 -->
    <dependency>
      <groupId>gov.nih.nlm.nls.lvg</groupId>
      <artifactId>lvgdist</artifactId>
      <version>2020.0</version>
    </dependency>

    <!-- https://mvnrepository.com/artifact/org.json/json -->
    <dependency>
      <groupId>org.json</groupId>
      <artifactId>json</artifactId>
      <version>20231013</version>
    </dependency>
    <dependency>
      <groupId>net.sourceforge.argparse4j</groupId>
      <artifactId>argparse4j</artifactId>
      <version>0.8.1</version>
    </dependency>
    <dependency>
      <groupId>info.debatty</groupId>
      <artifactId>java-string-similarity</artifactId>
      <version>0.23</version>
    </dependency>
    <dependency>
      <groupId>org.mapdb</groupId>
      <artifactId>mapdb</artifactId>
      <version>3.1.0</version>
    </dependency>

    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>

  </dependencies>
</project>
